--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ts-node": "^10.7.0"
   },
   "scripts": {
+    "compileAll": "yarn run compileBaseSass && yarn run compileBS && yarn run compileCanvas && yarn run compileGoL && yarn run compileMW && yarn run compileSnake",
     "compileBaseSass": "node-sass --output-style compressed sass/index.sass public/style.css",
     "compileBS": "tsc -p tsconfig/bs.json && node-sass --output-style compressed sass/bs.sass public/bs/style.css",
     "compileCanvas": "tsc -p tsconfig/canvas.json && node-sass --output-style compressed sass/canvas.sass public/canvas/style.css",
