--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "tsgames",
   "version": "1.0.0",
   "author": "oLsen",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "license": "MIT",
   "dependencies": {
     "@types/jquery": "^3.5.14",
     "jquery": "^3.6.0",
-    "node-sass": "^7.0.1",
+    "sass": "^1.69.4",
     "typescript": "^4.6.4",
     "uglify-js": "^3.15.5"
   },
@@ -20,16 +23,16 @@
   },
   "scripts": {
     "compileAll": "yarn run compileBaseSass && yarn run compileBS && yarn run compileCaDi && yarn run compileGoL && yarn run compileLiRo && yarn run compileMW && yarn run compilePeSo && yarn run compileSabo && yarn run compileSnake && yarn run compileTTT ",
-    "compileBaseSass": "node-sass --output-style compressed sass/index.sass public/style.css",
-    "compileBS": "tsc -p tsconfig/bs.json && node-sass --output-style compressed sass/bs.sass public/bs/style.css",
-    "compileCaDi": "tsc -p tsconfig/cadi.json && node-sass --output-style compressed sass/cadi.sass public/cadi/style.css",
-    "compileGoL": "tsc -p tsconfig/gol.json && node-sass --output-style compressed sass/gol.sass public/gol/style.css",
-    "compileLiRo": "tsc -p tsconfig/liro.json && node-sass --output-style compressed sass/liro.sass public/liro/style.css",
-    "compileMW": "tsc -p tsconfig/mw.json && node-sass --output-style compressed sass/mw.sass public/mw/style.css",
-    "compilePeSo": "tsc -p tsconfig/peso.json && node-sass --output-style compressed sass/peso.sass public/peso/style.css",
-    "compileSabo": "tsc -p tsconfig/sabo.json && node-sass --output-style compressed sass/sabo.sass public/sabo/style.css",
-    "compileSnake": "tsc -p tsconfig/snake.json && node-sass --output-style compressed sass/snake.sass public/snake/style.css",
-    "compileTTT": "tsc -p tsconfig/ttt.json && node-sass --output-style compressed sass/ttt.sass public/ttt/style.css",
+    "compileBaseSass": "sass --style compressed sass/index.sass public/style.css",
+    "compileBS": "tsc -p tsconfig/bs.json && sass --style compressed sass/bs.sass public/bs/style.css",
+    "compileCaDi": "tsc -p tsconfig/cadi.json && sass --style compressed sass/cadi.sass public/cadi/style.css",
+    "compileGoL": "tsc -p tsconfig/gol.json && sass --style compressed sass/gol.sass public/gol/style.css",
+    "compileLiRo": "tsc -p tsconfig/liro.json && sass --style compressed sass/liro.sass public/liro/style.css",
+    "compileMW": "tsc -p tsconfig/mw.json && sass --style compressed sass/mw.sass public/mw/style.css",
+    "compilePeSo": "tsc -p tsconfig/peso.json && sass --style compressed sass/peso.sass public/peso/style.css",
+    "compileSabo": "tsc -p tsconfig/sabo.json && sass --style compressed sass/sabo.sass public/sabo/style.css",
+    "compileSnake": "tsc -p tsconfig/snake.json && sass --style compressed sass/snake.sass public/snake/style.css",
+    "compileTTT": "tsc -p tsconfig/ttt.json && sass --style compressed sass/ttt.sass public/ttt/style.css",
     "test": "tsc -p tsconfig/test.json && mocha -r ts-node/register $NODE_DEBUG_OPTION test/**/**.test.ts"
   }
 }
