--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ts-node": "^10.7.0"
   },
   "scripts": {
-    "compileAll": "yarn run compileBaseSass && yarn run compileBS && yarn run compileCaDi && yarn run compileCoTra && yarn run compileGoL && yarn run compileLiRo && yarn run compileMW && yarn run compilePeSo && yarn run compileSabo && yarn run compileSnake && yarn run compileTTT && yarn run compileTTT3d",
+    "compileAll": "yarn run compileBaseSass && yarn run compileBS && yarn run compileCaDi && yarn run compileCoTra && yarn run compileGoL && yarn run compileLiRo && yarn run compileMW && yarn run compilePeSo && yarn run compileSabo && yarn run compileSnake && yarn run compileTTT && yarn run compileTTT3d && yarn run compileXmas",
     "compileBaseSass": "sass --style compressed sass/index.sass public/style.css",
     "compileBS": "tsc -p tsconfig/bs.json && sass --style compressed sass/bs.sass public/bs/style.css",
     "compileCaDi": "tsc -p tsconfig/cadi.json && sass --style compressed sass/cadi.sass public/cadi/style.css",
@@ -39,6 +39,7 @@
     "compileSnake": "tsc -p tsconfig/snake.json && sass --style compressed sass/snake.sass public/snake/style.css",
     "compileTTT": "tsc -p tsconfig/ttt.json && sass --style compressed sass/ttt.sass public/ttt/style.css",
     "compileTTT3d": "tsc -p tsconfig/ttt3d.json && sass --style compressed sass/ttt3d.sass public/ttt3d/style.css",
+    "compileXmas": "tsc -p tsconfig/xmas.json && sass --style compressed sass/xmas.sass public/xmas/style.css",
     "eslint": "eslint ts/*/*.ts test/*/*.ts",
     "eslintFix": "eslint ts/*/*.ts test/*/*.ts --fix",
     "test": "tsc -p tsconfig/test.json && nyc --reporter=text-summary --reporter=html mocha -r ts-node/register $NODE_DEBUG_OPTION test/**/**.test.ts"
