--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "license": "MIT",
   "dependencies": {
     "@types/jquery": "^3.5.14",
-    "jquery": "^3.6.0",
+    "bulma": "0.7.5",
+    "bulma-slider": "2.0.5",
+    "fontawesome-free": "^1.0.4",
+    "jquery": "^3.7.1",
+    "requirejs": "^2.3.6",
     "sass": "^1.69.4",
     "typescript": "^4.6.4",
     "uglify-js": "^3.15.5"
@@ -26,6 +30,7 @@
     "ts-node": "^10.7.0"
   },
   "scripts": {
+    "copyAssets": "cp node_modules/bulma/css/bulma.min.css public/ && cp node_modules/bulma-slider/dist/css/bulma-slider.min.css public/ && cp -a node_modules/fontawesome-free public/ && cp node_modules/requirejs/require.js public && cp node_modules/jquery/dist/jquery.min.js public",
     "compileAll": "yarn run compileBaseSass && yarn run compileBS && yarn run compileCaDi && yarn run compileCiSo  && yarn run compileCoTra && yarn run compileGoL && yarn run compileLiRo && yarn run compileMW && yarn run compilePeSo && yarn run compileSabo && yarn run compileSnake && yarn run compileTTT && yarn run compileTTT3d && yarn run compileXmas",
     "compileBaseSass": "sass --style compressed sass/index.sass public/style.css",
     "compileBS": "tsc -p tsconfig/bs.json && sass --style compressed sass/bs.sass public/bs/style.css",
