express server and eta template engine

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/jquery": "^3.5.14",
     "bulma": "0.7.5",
     "bulma-slider": "2.0.5",
+    "eta": "^3.2.0",
+    "express": "^4.18.2",
     "fontawesome-free": "^1.0.4",
     "jquery": "^3.7.1",
     "requirejs": "^2.3.6",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
+    "@types/express": "^4.17.21",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
@@ -30,24 +33,26 @@
     "ts-node": "^10.7.0"
   },
   "scripts": {
-    "copyAssets": "cp node_modules/bulma/css/bulma.min.css public/ && cp node_modules/bulma-slider/dist/css/bulma-slider.min.css public/ && cp -a node_modules/fontawesome-free public/ && cp node_modules/requirejs/require.js public && cp node_modules/jquery/dist/jquery.min.js public",
-    "compileAll": "yarn run compileBaseSass && yarn run compileBS && yarn run compileCaDi && yarn run compileCiSo  && yarn run compileCoTra && yarn run compileGoL && yarn run compileLiRo && yarn run compileMW && yarn run compilePeSo && yarn run compileSabo && yarn run compileSnake && yarn run compileTTT && yarn run compileTTT3d && yarn run compileXmas",
-    "compileBaseSass": "sass --style compressed sass/index.sass public/style.css",
-    "compileBS": "tsc -p tsconfig/bs.json && sass --style compressed sass/bs.sass public/bs/style.css",
-    "compileCaDi": "tsc -p tsconfig/cadi.json && sass --style compressed sass/cadi.sass public/cadi/style.css",
-    "compileCiSo": "tsc -p tsconfig/ciso.json && sass --style compressed sass/ciso.sass public/ciso/style.css",
-    "compileCoTra": "tsc -p tsconfig/cotra.json && sass --style compressed sass/cotra.sass public/cotra/style.css",
-    "compileGoL": "tsc -p tsconfig/gol.json && sass --style compressed sass/gol.sass public/gol/style.css",
-    "compileLiRo": "tsc -p tsconfig/liro.json && sass --style compressed sass/liro.sass public/liro/style.css",
-    "compileMW": "tsc -p tsconfig/mw.json && sass --style compressed sass/mw.sass public/mw/style.css",
-    "compilePeSo": "tsc -p tsconfig/peso.json && sass --style compressed sass/peso.sass public/peso/style.css",
-    "compileSabo": "tsc -p tsconfig/sabo.json && sass --style compressed sass/sabo.sass public/sabo/style.css",
-    "compileSnake": "tsc -p tsconfig/snake.json && sass --style compressed sass/snake.sass public/snake/style.css",
-    "compileTTT": "tsc -p tsconfig/ttt.json && sass --style compressed sass/ttt.sass public/ttt/style.css",
-    "compileTTT3d": "tsc -p tsconfig/ttt3d.json && sass --style compressed sass/ttt3d.sass public/ttt3d/style.css",
-    "compileXmas": "tsc -p tsconfig/xmas.json && sass --style compressed sass/xmas.sass public/xmas/style.css",
+    "copyAssets": "cp node_modules/bulma/css/bulma.min.css static/ && cp node_modules/bulma-slider/dist/css/bulma-slider.min.css static/ && cp -a node_modules/fontawesome-free static/ && cp node_modules/requirejs/require.js static && cp node_modules/jquery/dist/jquery.min.js static",
+    "compileAll": "yarn run compileBaseSass && yarn run compileBS && yarn run compileCaDi && yarn run compileCiSo  && yarn run compileCoTra && yarn run compileGoL && yarn run compileLiRo && yarn run compileMW && yarn run compilePeSo && yarn run compileSabo && yarn run compileServer && yarn run compileSnake && yarn run compileTTT && yarn run compileTTT3d && yarn run compileXmas",
+    "compileBaseSass": "sass --style compressed sass/index.sass static/style.css",
+    "compileBS": "tsc -p tsconfig/bs.json && sass --style compressed sass/bs.sass static/bs/style.css",
+    "compileCaDi": "tsc -p tsconfig/cadi.json && sass --style compressed sass/cadi.sass static/cadi/style.css",
+    "compileCiSo": "tsc -p tsconfig/ciso.json && sass --style compressed sass/ciso.sass static/ciso/style.css",
+    "compileCoTra": "tsc -p tsconfig/cotra.json && sass --style compressed sass/cotra.sass static/cotra/style.css",
+    "compileGoL": "tsc -p tsconfig/gol.json && sass --style compressed sass/gol.sass static/gol/style.css",
+    "compileLiRo": "tsc -p tsconfig/liro.json && sass --style compressed sass/liro.sass static/liro/style.css",
+    "compileMW": "tsc -p tsconfig/mw.json && sass --style compressed sass/mw.sass static/mw/style.css",
+    "compilePeSo": "tsc -p tsconfig/peso.json && sass --style compressed sass/peso.sass static/peso/style.css",
+    "compileSabo": "tsc -p tsconfig/sabo.json && sass --style compressed sass/sabo.sass static/sabo/style.css",
+    "compileServer": "tsc -p tsconfig/server.json",
+    "compileSnake": "tsc -p tsconfig/snake.json && sass --style compressed sass/snake.sass static/snake/style.css",
+    "compileTTT": "tsc -p tsconfig/ttt.json && sass --style compressed sass/ttt.sass static/ttt/style.css",
+    "compileTTT3d": "tsc -p tsconfig/ttt3d.json && sass --style compressed sass/ttt3d.sass static/ttt3d/style.css",
+    "compileXmas": "tsc -p tsconfig/xmas.json && sass --style compressed sass/xmas.sass static/xmas/style.css",
     "eslint": "eslint ts/*/*.ts test/*/*.ts",
     "eslintFix": "eslint ts/*/*.ts test/*/*.ts --fix",
+    "startServer": "node ts/server.js",
     "test": "tsc -p tsconfig/test.json && nyc --reporter=text-summary --reporter=html mocha -r ts-node/register $NODE_DEBUG_OPTION test/**/**.test.ts"
   }
 }
