--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@types/jquery": "^3.5.14",
     "bulma": "0.7.5",
     "bulma-slider": "2.0.5",
     "eta": "^3.2.0",
     "express": "^4.18.2",
-    "fontawesome-free": "^1.0.4",
     "jquery": "^3.7.1",
     "requirejs": "^2.3.6",
     "sass": "^1.69.4",
@@ -33,7 +33,7 @@
     "ts-node": "^10.7.0"
   },
   "scripts": {
-    "copyAssets": "cp node_modules/bulma/css/bulma.min.css static/ && cp node_modules/bulma-slider/dist/css/bulma-slider.min.css static/ && cp -a node_modules/fontawesome-free static/ && cp node_modules/requirejs/require.js static && cp node_modules/jquery/dist/jquery.min.js static",
+    "copyAssets": "cp node_modules/bulma/css/bulma.min.css static/ && cp node_modules/bulma-slider/dist/css/bulma-slider.min.css static/ && cp -a node_modules/@fortawesome/fontawesome-free static/ && cp node_modules/requirejs/require.js static && cp node_modules/jquery/dist/jquery.min.js static",
     "compileAll": "yarn run compileBaseSass && yarn run compileBS && yarn run compileCaDi && yarn run compileCiSo  && yarn run compileCoTra && yarn run compileGoL && yarn run compileLiRo && yarn run compileMW && yarn run compilePeSo && yarn run compileSabo && yarn run compileServer && yarn run compileSnake && yarn run compileTTT && yarn run compileTTT3d && yarn run compileXmas",
     "compileBaseSass": "sass --style compressed sass/index.sass static/style.css",
     "compileBS": "tsc -p tsconfig/bs.json && sass --style compressed sass/bs.sass static/bs/style.css",
